--- a/Fina.Api/appsettings.json
+++ b/Fina.Api/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "FrontendUrl" : "http://localhost:5100",
+  "BackendUrl" : "http://localhost:5223",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=balta;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=false;TrustServerCertificate=True;"
   },
